--- a/app/globals.css
+++ b/app/globals.css
@@ -93,25 +93,7 @@
   }
 }
 
-/* @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}   */
 
-
-/* Uploadthing button text override */
-/*
-html.dark .upload-field .text-white {
-  color: #ffffff !important;
-}
-
-.upload-field .text-white {
-  color: #000 !important;
-} */
 @layer base {
   * {
     @apply border-border;
@@ -122,6 +104,15 @@ html.dark .upload-field .text-white {
 }
 
 
+
+/*********** Uploadthing button text override ****************/
+html.dark .upload-field .text-white {
+  color: #ffffff !important;
+}
+
+.upload-field .text-white {
+  color: #000 !important;
+}
 
 
 /****** Scrollbar style *********/
