--- a/app/globals.css
+++ b/app/globals.css
@@ -104,7 +104,9 @@
   }
 }
 
-
+body {
+  font-family: var(--font-inter), sans-serif;
+}
 
 /*********** Uploadthing button text override ****************/
 html.dark .upload-field .text-white {
